--- a/Project/public/stores.html
+++ b/Project/public/stores.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="start.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>JKPG</title>
+    <title>Stores</title>
 </head>
 
 <body>
-    JKPG Project
+    <div class="storesGrid"></div>
 </body>
-
 </html>
